# benchmarking-exercise

./: .gitignore  ASSIGNMENT.md  Cargo.toml  README.md  rust-toolchain.toml
.config/: README.md  taplo.toml
pallets/dpos/: Cargo.toml
pallets/dpos/src/: lib.rs  mock.rs
pallets/free-tx/: Cargo.toml
pallets/free-tx/src/: lib.rs  mock.rs
pallets/identity/: Cargo.toml
pallets/identity/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/identity/src/weights/: weights.rs
pallets/multisig/: Cargo.toml
pallets/multisig/src/: lib.rs  mock.rs
pallets/treasury/: Cargo.toml
pallets/treasury/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
