[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/polkadot-sdk-minimal-template.git"
edition = "2021"

[workspace]
members = [
	"pallets/identity",
	"runtime",
]
resolver = "2"

[workspace.dependencies]
# base deps
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1.0.143", default-features = false }

# substrate primitives
sp-core = { version = "36.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-io = { version = "40.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false, features = [
	"serde",
] }
sp-std = { version = "14.0.0", default-features = false }

# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
frame = { version = "0.9.1", package = "polkadot-sdk-frame", default-features = false, features = [
	"experimental",
	"runtime",
] }

frame-benchmarking = { version = "40.0.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }

substrate-wasm-builder = { version = "26.0.0" }
