[package]
name = "pba-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk. (polkadot v1.11.0)"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# genesis builder that allows us to interact with runtime genesis config
sp-genesis-builder = { workspace = true }
sp-runtime = { workspace = true }

# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
frame = { workspace = true }

# pallets that we want to use
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-sudo = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-assets = { workspace = true }

# local pallets
pallet-dpos = { path = "../pallets/dpos", default-features = false }
pallet-multisig = { path = "../pallets/multisig", default-features = false }
pallet-treasury = { path = "../pallets/treasury", default-features = false }
pallet-free-tx = { path = "../pallets/free-tx", default-features = false }
pallet-identity = { path = "../pallets/identity", default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",

	"frame/std",

	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"pallet-assets/std",

	"pallet-dpos/std",
	"pallet-free-tx/std",
	"pallet-multisig/std",
	"pallet-treasury/std",
	"pallet-identity/std",

	"sp-genesis-builder/std",
	"sp-runtime/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",

	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",

	"pallet-dpos/runtime-benchmarks",
	"pallet-free-tx/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",

	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame/try-runtime",

	"pallet-balances/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",

	"pallet-assets/try-runtime",

	"pallet-dpos/try-runtime",
	"pallet-free-tx/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-identity/try-runtime",

	"sp-runtime/try-runtime",
]
