[package]
name = "pallet-identity"
version = "1.0.0"
description = "Simplified Identity pallet for benchmarking exercises"
authors = ["PBA <https://github.com/Polkadot-Blockchain-Academy>"]
homepage = "https://substrate.io"
edition = "2021"
publish = false
repository = "https://github.com/Polkadot-Blockchain-Academy/pba-content/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
frame = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"frame/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "frame/try-runtime"]